# efx-mux

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  repomix.config.json  tsconfig.build.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.claude/: gsd-file-manifest.json  settings.json  settings.local.json
.claude/agents/: gsd-ai-researcher.md  gsd-code-fixer.md  gsd-debug-session-manager.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-intel-updater.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  (+3 more)
.codex/: config.toml  gsd-file-manifest.json  hooks.json
.opencode/: gsd-file-manifest.json  opencode.json  package.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v0.3.0-MILESTONE-AUDIT.md
docs/: macos-release.md
scripts/: macos-notarized-release.sh
src/: drag-manager.js  drag-manager.test.ts  drag-manager.ts  index.html  main.js  main.test.tsx  main.tsx  state-manager.js  state-manager.test.ts  state-manager.ts  tokens.test.ts  tokens.ts
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/src/: file_ops.rs  file_watcher.rs  git_ops.rs  git_status.rs  lib.rs  main.rs  project.rs  server.rs  state.rs  window_resize.rs
src-tauri/src/terminal/: pty.rs
src-tauri/src/theme/: iterm2.rs  mod.rs  types.rs  watcher.rs
(+1207 files in other folders)
