[package]
name = "gsd-mux"
version = "0.2.2"
description = "Terminal Multiplexer for AI-Assisted Development"
authors = ["Laurent Marques"]
edition = "2021"

[lib]
name = "gsd_mux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9.0"
notify = { version = "8.2", features = ["serde"] }
notify-debouncer-mini = "0.7"
git2 = "0.20.4"
regex = "1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSResponder"] }
objc2-foundation = { version = "0.3", features = ["NSGeometry"] }
